movendo tudo pra cá

--- a/dia 1/style.css
+++ b/dia 1/style.css
@@ -1,6 +1,6 @@
 html {
   font-size: 10px;
-  background: url(./images/close-up-photo-of-drum-set-995301.jpg) bottom center;
+  background: url(./images/close-up-photo-of-drum-set-995301.svg) bottom center;
   background-size: cover;
 }
 
